upgrade scala2 to scala3